@@ -1,5 +1,6 @@
-"$(cd $(dirname "$1");pwd)"/../bin/jdk-18.jdk/Contents/Home/bin/javac --module-path "$(cd $(dirname "$1");pwd)"/../bin/javafx-sdk-18/lib --add-modules=javafx.media -d "$(cd $(dirname "$1");pwd)"/../pkg "$(cd $(dirname "$1");pwd)"/../src/*.java
-cd "$(cd $(dirname "$1");pwd)"/../pkg
-"$(cd $(dirname "$1");pwd)"/../bin/jdk-18.jdk/Contents/Home/bin/jar cmf "$(cd $(dirname "$1");pwd)"/../debug/MANIFEST.MF "$(cd $(dirname "$1");pwd)"/../pkg/BALL_GAME.jar *.class
-rm "$(cd $(dirname "$1");pwd)"/../pkg/*.class
+out_dir="$(cd $(dirname "$1");pwd)"/../pkg
+"$(cd $(dirname "$1");pwd)"/../bin/jdk-18.jdk/Contents/Home/bin/javac -d $out_dir "$(cd $(dirname "$1");pwd)"/../src/*.java
+cd $out_dir
+../bin/jdk-18.jdk/Contents/Home/bin/jar cmf ../debug/MANIFEST.MF BALL_GAME.jar *.class
+rm *.class
 cd "$(cd $(dirname "$1");pwd)"
